# lenia_sound

./: .gitignore  Cargo.toml  build.zig  build.zig.zon  scratch.ipynb
src/: main.rs  main.zig
