[package]
name = "lenia_sound"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = {version = "4.4.18", features = ["derive"]}
cpal = "0.15.2"
rand = "0.8.5"
realfft = "3.3.0"
ringbuf = "0.3.3"
rustfft = "6.2.0"
